fixed gap on mobile

--- a/src/Resources/Stylesheet.css
+++ b/src/Resources/Stylesheet.css
@@ -139,6 +139,7 @@ form{
 }
 .dress-cards{
     display: flex;
+    gap: 20px;
     align-items: center;
     flex-wrap: wrap;
     font-size: 25px;
